--- a/applications/dashboard/scss/editor/_richEditor.scss
+++ b/applications/dashboard/scss/editor/_richEditor.scss
@@ -732,6 +732,17 @@
                     padding-left: 0;
                 }
             }
+
+
+            .richEditor {
+                padding: {
+                    left: $richEditor-pilcrow_gutter;
+                }
+
+                .richEditor {
+                    padding-left: 0;
+                }
+            }
         }
 
         // Activity
