--- a/applications/dashboard/scss/editor/embeds/_embedGetty.scss
+++ b/applications/dashboard/scss/editor/embeds/_embedGetty.scss
@@ -7,4 +7,8 @@
     .embedExternal-content {
         width: auto;
     }
+
+    .getty {
+        display: block;
+    }
 }
